--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <script src="https://kit.fontawesome.com/edba84fd66.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>SuperMercado A</title>
@@ -14,13 +15,22 @@
 
     <header>
         <div>
-            <h1>Logo</h1>
-            <form action="#" method="post">
-                <input type="search" name="pesquisa" id="pesquisa">
+            <figure>
+                <img src="assets/img/logoA.png" alt="Logo SuperMercado A">
+                <figcaption>SuperMercado A</figcaption>
+            </figure>
+            
+            <form action="#" method="post" class="campo-pesquisa">
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input type="search" name="pesquisa" id="pesquisa" placeholder="Pesquise">
             </form>
-            <i class="fa-solid fa-bars" id="btnMenu"></i>
+            <span class="material-symbols-outlined" id="btnMenu">menu</span>
         </div>
         <nav id="menu">
+            <form action="#" method="post" class="campo-pesquisa">
+                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input type="search" name="pesquisa" id="pesquisa" placeholder="Pesquise">
+            </form>
             <ul>
                 <li><a href="">Carnes</a></li>
                 <li><a href="">Margarinas</a></li>
@@ -39,6 +49,7 @@
     <script>
 
         function resize() {
+            btnMenu.innerText = 'menu'
             if (window.innerWidth >= 768) {
                 menu.style.display = 'block'
             } else {
@@ -47,10 +58,12 @@
         }
 
         btnMenu.addEventListener('click', () => {
-            if (menu.style.display == 'none') {
-                menu.style.display = 'block'
-            } else {
+            if (menu.style.display == 'block') {
                 menu.style.display = 'none'
+                btnMenu.innerText = 'menu'
+            } else {
+                menu.style.display = 'block'
+                btnMenu.innerText = 'close'
             }
         })
 
