--- a/index.html
+++ b/index.html
@@ -55,103 +55,131 @@
             <h1>Carnes/Frango</h1>
             <section class="produtos">
                 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img1.png" alt="Carne"></div>
                     <figcaption>
                         Picanha Friboi tradicional peça a vácuo kg
                     </figcaption>
                     <p>R$ 57,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img2.png" alt="Carne"></div>
                     <figcaption>
                         Fraldinha Friboi peça kg
                     </figcaption>
                     <p>R$ 36,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img3.png" alt="Carne"></div>
                     <figcaption>
                         Contrafilé pedaço kg
                     </figcaption>
                     <p>R$ 41,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img4.png" alt="Carne"></div>
                     <figcaption>
                         Paleta de cordeiro Do Chef congelada peça kg
                     </figcaption>
                     <p>R$ 45,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img5.png" alt="Carne"></div>
                     <figcaption>
                         Cupim Friboi pedaço kg
                     </figcaption>
                     <p>R$ 36,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img6.png" alt="Carne"></div>
                     <figcaption>
                         Picanha suína Pamplona temperada resfriada peça kg
                     </figcaption>
                     <p>R$ 26,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img7.png" alt="Carne"></div>
                     <figcaption>
                         Costela suína Perdigão a granel kg
                     </figcaption>
                     <p>R$ 21,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img8.png" alt="Carne"></div>
                     <figcaption>
                         Bisteca suína Sadia a granel kg
                     </figcaption>
                     <p>R$ 17,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img9.png" alt="Carne"></div>
                     <figcaption>
                         Coxinha da asa de frango a granel kg
                     </figcaption>
                     <p>R$ 14,99</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img10.png" alt="Carne"></div>
                     <figcaption>
                         Linguiça toscana Seara a granel kg
                     </figcaption>
                     <p>R$ 15,29</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
                 </figure>
 
-                <figure>
+                <figure class="card-produto">
                     <div class="img"><img src="assets/img/img11.png" alt="Carne"></div>
                     <figcaption>
                         Linguiça calabresa defumada Seara a granel kg
                     </figcaption>
                     <p>R$ 18,59</p>
-                    <button><span class="material-symbols-outlined">shopping_cart</span>Adicionar</button>
+                </figure>
+
+            </section>
+        </article>
+
+        <article class="categoria">
+            <section class="parallax" id="margarinas">
+
+            </section>
+            <h1>Margarinas</h1>
+            <section class="produtos">
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img12.png" alt="Margarina"></div>
+                    <figcaption>Margarina Qualy tradicional 500 g
+                    </figcaption>
+                    <p>R$ 4,99</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img12-1.png" alt="Margarina"></div>
+                    <figcaption>Margarina Delícia com sal 500 g
+                    </figcaption>
+                    <p>R$ 5,99</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img12-2.png" alt="Margarina"></div>
+                    <figcaption>Margarina Claybom com sal 500 g
+                    </figcaption>
+                    <p>R$ 5,49</p>
+                </figure>
+
+                
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img12-3.png" alt="Margarina"></div>
+                    <figcaption>Margarina Becel com sal 500 g
+                    </figcaption>
+                    <p>R$ 6,99</p>
                 </figure>
 
             </section>
@@ -159,25 +187,8 @@
 
     </main>
 
-    <script>
-
-        function resize() {
-            if (window.innerWidth >= 768) {
-                menu.style.display = 'block'
-            }
-        }
-
-        btnMenu.addEventListener('click', () => {
-            if (menu.style.display == 'block') {
-                menu.style.display = 'none'
-                btnMenu.innerText = 'menu'
-            } else {
-                menu.style.display = 'block'
-                btnMenu.innerText = 'close'
-            }
-        })
-
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
