mais categorias e ajustes

--- a/index.html
+++ b/index.html
@@ -177,12 +177,10 @@
         </article>
 
         <article class="categoria">
-
             <section class="parallax" id="temperos">
 
             </section>
             <h1>Temperos</h1>
-
             <section class="produtos">
                 <figure class="card-produto">
                     <div class="img"><img src="assets/img/img14.png" alt="Temperos"></div>
@@ -211,6 +209,85 @@
 
         </article>
 
+        <article class="categoria">
+            <section class="parallax" id="doces">
+
+            </section>
+            <h1>Doces</h1>
+            <section class="produtos">
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img15.png" alt="Doces"></div>
+                    <figcaption>Leite condensado Moça semidesnatado TP 395 g</figcaption>
+                    <p>R$ 4,69</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img16.png" alt="Doces"></div>
+                    <figcaption>Chocolate em tablete Lacta sabores 90 g</figcaption>
+                    <p>R$ 4,19</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img17.png" alt="Doces"></div>
+                    <figcaption>Chocolate Lindt Lindor Milk ou Swiss Classic 100 g</figcaption>
+                    <p>R$ 19,90</p>
+                </figure>
+            </section>
+        </article>
+
+        <article class="categoria">
+            <section class="parallax" id="bebidas">
+
+            </section>
+            <h1>Bebidas</h1>
+            <section class="produtos">
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img18.png" alt="Bebidas"></div>
+                    <figcaption>Refrigerante H2OH! sabores pet 1,5 L</figcaption>
+                    <p>R$ 4,99</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img19.png" alt="Bebidas"></div>
+                    <figcaption>Cerveja Bohemia puro malte lata 350 ml</figcaption>
+                    <p>R$ 2,49</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img20.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Espumante Casa Perini moscatel branco 750 ml</figcaption>
+                    <p>R$ 46,99</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img21.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Espumante Salton moscatel branco 750 ml</figcaption>
+                    <p>R$ 29,90</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img22.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Salton Intenso merlot tinto 750 ml</figcaption>
+                    <p>R$ 31,90</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img23.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Frisante Mioranza suave rosé 750 ml</figcaption>
+                    <p>R$ 19,90</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img24.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Frances Bois Mirail Rouge tinto 750 ml</figcaption>
+                    <p>R$ 31,90</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img25.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Chileno Tres Toros cabernet sauvignon tinto 750 ml</figcaption>
+                    <p>R$ 29,90</p>
+                </figure>
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img26.png" alt="Bebidas"></div>
+                    <figcaption>Vinho Português Terra Mãe tinto 750 ml</figcaption>
+                    <p>R$ 30,90</p>
+                </figure>
+            </section>
+        </article>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
