adicionando alguns produtos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     </header>
 
     <main>
-
         <article class="categoria">
             <section class="parallax" id="carnes">
             
@@ -172,6 +171,18 @@
                     <div class="img"><img src="assets/img/img13-1.png" alt="Grãos"></div>
                     <figcaption>Feijão Carioca Kicaldo 1kg</figcaption>
                     <p>R$ 8,99</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img13-2.png" alt="Grãos"></div>
+                    <figcaption>Feijão Preto Camil 1kg</figcaption>
+                    <p>R$ 9,49</p>
+                </figure>
+
+                <figure class="card-produto">
+                    <div class="img"><img src="assets/img/img13-3.png" alt="Grãos"></div>
+                    <figcaption>Café Pilão Torrado em Grãos Espresso 1Kg</figcaption>
+                    <p>R$ 79,90</p>
                 </figure>
             </section>
         </article>
