iniciando o formulário de contato

--- a/index.html
+++ b/index.html
@@ -539,6 +539,26 @@
                 </figure>
             </section>
         </article>
+
+        <section class="contato">
+            <h1>Formulário de Contato</h1>
+            <form action="#" method="get">
+                <label for="nome">Nome </label>
+                <input type="text" name="nome" id="nome" placeholder="Ex: João da Silva" required>
+
+                <label for="email">E-mail </label>
+                <input type="email" name="email" id="email" placeholder="joaozinho@gmail.com" required>
+
+                <label for="assunto">Assunto </label>
+                <input type="text" name="assunto" id="assunto" required>
+
+                <label for="msg">Mensagem </label>
+                <textarea name="msg" id="msg" cols="30" rows="5" required></textarea>
+
+                <input type="submit" value="Enviar">
+            </form>
+        </section>
+
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
