--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/edba84fd66.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>SuperMercado A</title>
@@ -558,8 +558,27 @@
                 <input type="submit" value="Enviar">
             </form>
         </section>
-
     </main>
+
+    <footer>
+        <div class="redes">
+            <h2>Siga nossas redes sociais</h2>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-tiktok"></i>
+            <i class="fa-brands fa-linkedin"></i>
+        </div>
+        <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Sobre nós</a></li>
+            <li><a href="#">Termo de política de privacidade</a></li>
+            <li><a href="#">Blog</a></li>
+        </ul>
+        <div class="direitos">
+            <p><i class="fa-regular fa-copyright"></i> Desenvolvido por Lucas Fernandes - RGM 34611312</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="js/script.js"></script>
