ajustes no rodapé

--- a/index.html
+++ b/index.html
@@ -562,12 +562,12 @@
 
     <footer>
         <div class="redes">
-            <h2>Siga nossas redes sociais</h2>
+            <h2>Siga nossas redes sociais!</h2>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-tiktok"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin-in"></i>
         </div>
         <ul class="links">
             <li><a href="index.html">Home</a></li>
