mais alguns ajustes no rodapé

--- a/index.html
+++ b/index.html
@@ -561,20 +561,20 @@
     </main>
 
     <footer>
+        <h2>Siga nossas redes sociais!</h2>
         <div class="redes">
-            <h2>Siga nossas redes sociais!</h2>
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-tiktok"></i>
             <i class="fa-brands fa-linkedin-in"></i>
         </div>
-        <ul class="links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Sobre nós</a></li>
-            <li><a href="#">Termo de política de privacidade</a></li>
-            <li><a href="#">Blog</a></li>
-        </ul>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="#">Sobre nós</a>
+            <a href="#">Termo de política de privacidade</a>
+            <a href="#">Blog</a>
+        </div>
         <div class="direitos">
             <p><i class="fa-regular fa-copyright"></i> Desenvolvido por Lucas Fernandes - RGM 34611312</p>
         </div>
