--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
     </header>
 
     <main>
+        <section class="banner">
+            <div class="img-banner">
+                <img src="assets/img/cesta.png">
+            </div>
+            <div class="conteudo-banner">
+                <h1>Confira nossas ofertas!</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <a href="#carnes">Compre já<i class="fa-solid fa-arrow-down"></i></a>
+            </div>
+        </section>
+        
         <article class="categoria">
             <section class="parallax" id="carnes">
             
