--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <section class="banner">
             <div class="img-banner">
-                <img src="assets/img/cesta.png">
+                <img src="assets/img/banner-desktop.png">
             </div>
             <div class="conteudo-banner">
                 <h1>Confira nossas ofertas!</h1>
