--- a/index.html
+++ b/index.html
@@ -554,19 +554,20 @@
         <section class="contato">
             <h1>Formulário de Contato</h1>
             <form action="#" method="get">
-                <label for="nome">Nome </label>
-                <input type="text" name="nome" id="nome" placeholder="Ex: João da Silva" required>
+                <div>
+                    <label for="nome">Nome </label>
+                    <input type="text" name="nome" id="nome" placeholder="Ex: João da Silva" required>
+                    <label for="email">E-mail </label>
+                    <input type="email" name="email" id="email" placeholder="joaozinho@gmail.com" required>
+                    <label for="assunto">Assunto </label>
+                    <input type="text" name="assunto" id="assunto" required>
+                </div>
 
-                <label for="email">E-mail </label>
-                <input type="email" name="email" id="email" placeholder="joaozinho@gmail.com" required>
-
-                <label for="assunto">Assunto </label>
-                <input type="text" name="assunto" id="assunto" required>
-
-                <label for="msg">Mensagem </label>
-                <textarea name="msg" id="msg" cols="30" rows="5" required></textarea>
-
-                <input type="submit" value="Enviar">
+                <div>
+                    <label for="msg">Mensagem </label>
+                    <textarea name="msg" id="msg" rows="5" required></textarea>
+                    <input type="submit" value="Enviar">
+                </div>
             </form>
         </section>
     </main>
