--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <a href="#">Blog</a>
         </div>
         <div class="direitos">
-            <p><i class="fa-regular fa-copyright"></i> Desenvolvido por Lucas Fernandes - RGM 34611312</p>
+            <p><i class="fa-regular fa-copyright"></i> Lucas Fernandes - RGM 34611312</p>
         </div>
     </footer>
 
